--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,15 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+
 </head>
 
 <body>
   <app-root></app-root>
+
 </body>
+
+
 
 </html>
