--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
 
+  <!-- <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" /> -->
+
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
