--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root class="background-main"></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
